k8s/dashboard-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: dashboard
  ports:
    - port: 3000
      targetPort: 3000
